--- a/src/app/modules/dashboard/components/box-container/box-container.component.html
+++ b/src/app/modules/dashboard/components/box-container/box-container.component.html
@@ -1,1 +1,29 @@
-<p>box-container works!</p>
+  
+<div class="card-container">
+    <a (click)="addBox()" class="card" target="_blank" rel="noopener">
+      <svg class="material-icons" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/></svg>
+
+      <span>Add box</span>
+
+    </a>
+
+</div>
+
+<div #boxContainer class="card-container box-container">
+  
+    <app-box 
+        appDraggable
+        *ngFor="let box of boxes; let i = index;"
+        (mousedown)="acivateBox(box)"
+        (click)="acivateBox(box)"
+        [isActive]="box == activatedBox" 
+        [ngClass]="{'active': box == activatedBox}"
+        id="{{box}}"
+        class="box-item"
+        [box]="box"
+        [boundary]="boundary"
+        [dragTarget]="'#' + box">
+    </app-box>
+
+</div>
+ 
